fix: Fix code wrapping in Safari

--- a/assets/scss/components/_code.scss
+++ b/assets/scss/components/_code.scss
@@ -60,3 +60,7 @@ pre code:hover {
 pre code::-webkit-scrollbar-thumb:hover {
   background: $gray-200;
 }
+
+.highlight > pre {
+  white-space: nowrap;
+}
